# news

./: .gitignore  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  tests.py
accounts/migrations/: 0001_initial.py
articles/: admin.py  models.py  views.py
articles/migrations/: 0001_initial.py  0002_comment.py
django_project/: settings.py  urls.py
pages/: tests.py
templates/: article_delete.html  article_detail.html  article_edit.html  article_list.html  article_new.html  base.html  home.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_confirm.html  password_reset_form.html  signup.html
