[project]
name = "news"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruairi O'Donohoe",email = "58832267+ruairiodonohoe@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "djhtml (>=3.0.8,<4.0.0)",
    "django (>=5.2.4,<6.0.0)",
    "django-crispy-forms (>=2.4,<3.0)",
    "crispy-bootstrap5 (>=2025.6,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
